--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
@@ -1183,10 +1183,27 @@
                     <hr>
                 </div>
             </div>
-            <div class=" coupon-box-btn col-12 d-flex shopping-box ">
-                <a asp-controller="Cart" asp-action="ConfrimOrder" id="submit-order-btn"
-                   class=" checkout-btn ml-auto btn hvr-hover">送出訂單</a>
-            </div>
+            <form id="form" name="form" method="POST" action="https://payment-stage.ecpay.com.tw/Cashier/AioCheckOut/V5">
+                <!--step2 : 收到後端的值印出來-->
+                <div class=" coupon-box-btn col-12 d-flex shopping-box ">
+                    <button type="submit" id="submit-order-btn"
+                            class=" checkout-btn ml-auto btn hvr-hover">
+                        送出訂單
+                    </button>
+                </div>
+                <div hidden>
+                @if (Model != null)
+                {
+                    @foreach (var key in @Model.keyValuePairs.Keys.ToList())
+                    {
+                        @(key) <input type="text" name="@key" value="@Model.keyValuePairs[key]" />
+
+                        <br />
+                    }
+                    @*<button type="submit" id="checkoutBtn">送出</button>*@
+                }
+                </div>
+            </form>
         </div>
     </div>
 </div>
